--- a/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
+++ b/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
@@ -19,6 +19,7 @@
     <AssemblyVersion>1.3.2.0</AssemblyVersion>
     <FileVersion>1.3.2.0</FileVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
 
