--- a/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
+++ b/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
@@ -5,7 +5,7 @@
     <UseWPF>true</UseWPF>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageId>Notifications.Wpf.Core</PackageId>
     <Authors>Adrian Gaś, Simon Mauracher, Marcel Juen</Authors>
     <Company />
@@ -18,7 +18,7 @@
     <Version>1.3.2</Version>
     <AssemblyVersion>1.3.2.0</AssemblyVersion>
     <FileVersion>1.3.2.0</FileVersion>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <Platforms>x64</Platforms>
   </PropertyGroup>
 
